[gd_scene load_steps=19 format=3 uid="uid://x163awkqxfit"]

[ext_resource type="PackedScene" uid="uid://bgbu7tlnevbo3" path="res://PKC/pokemon.tscn" id="1_2njg4"]
[ext_resource type="Script" path="res://PKC/BattleSystem.gd" id="1_e01fe"]
[ext_resource type="Script" path="res://PKC/Camp.gd" id="1_pswc5"]
[ext_resource type="Script" path="res://PKC/Commands/Pass.gd" id="2_an4jq"]
[ext_resource type="Script" path="res://PKC/Commands/Move.gd" id="3_i7yeb"]
[ext_resource type="Script" path="res://PKC/Commands/Tackle.gd" id="4_srhnw"]
[ext_resource type="Script" path="res://PKC/Pokemon.gd" id="5_d55lq"]
[ext_resource type="Script" path="res://Util/CameraRig.gd" id="9_4xj64"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7esks"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0, 0.8, 0.141176, 1)
metallic = 0.71
metallic_specular = 0.0
roughness = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_qn4bd"]
material = SubResource("StandardMaterial3D_7esks")
size = Vector2(5, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ffrid"]
size = Vector3(5, 0.01, 5)

[sub_resource type="PlaneMesh" id="PlaneMesh_g5c0h"]
size = Vector2(5, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l0i1w"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.239216, 0.239216, 0.239216, 1)
metallic = 0.3
metallic_specular = 1.0
roughness = 0.23

[sub_resource type="BoxShape3D" id="BoxShape3D_f3gb6"]
size = Vector3(5, 0.1, 5)

[sub_resource type="SphereShape3D" id="SphereShape3D_vtavm"]
radius = 0.1

[sub_resource type="SphereMesh" id="SphereMesh_8vgnm"]
radius = 0.1
height = 0.2

[sub_resource type="GDScript" id="GDScript_ltquw"]
script/source = "extends Node3D

enum BREAKPOINT {
	FIRST_AVAILABLE,
	FIRST_SUCESSFUL,
	ALL
}
enum ORDER {
	SEQUENTIAL,
	RANDOM
}
enum RESOLUTION {
	NOTHING,
	RANDOMIZE_ORDER,
	MOVE_TO_FRONT,
	MOVE_TO_BACK,
	DELETE,
	DELETE_WHEN_DONE
}

@export var break_point : BREAKPOINT = BREAKPOINT.FIRST_SUCESSFUL
@export var order : ORDER = ORDER.SEQUENTIAL
@export var resolution : RESOLUTION = RESOLUTION.NOTHING

func run(delta : float = 0.0):
	for command in get_current_nodes():
		command.run(delta)
		resolve(command)

func get_current_nodes() -> Array:
	var children : = get_children()
	if order == ORDER.RANDOM:
		children.shuffle()
	match break_point:
		BREAKPOINT.ALL:
			return children
		BREAKPOINT.FIRST_SUCESSFUL:
			for child in children:
				if child.can_do():
					return [child]
			return []
		BREAKPOINT.FIRST_AVAILABLE, _:
			return [children[0]]
			
func resolve(node : Node3D):
	match resolution:
		RESOLUTION.MOVE_TO_FRONT:
			move_child(node, 0)
		RESOLUTION.MOVE_TO_BACK:
			move_child(node, -1)
		RESOLUTION.RANDOMIZE_ORDER:
			move_child(node, randi() % get_child_count())
		RESOLUTION.DELETE:				
			node.free()
		RESOLUTION.DELETE_WHEN_DONE:
			if node.complete():
				node.free()
		RESOLUTION.NOTHING, _:
			pass
		
func has_nodes() -> bool:
	return get_child_count() > 0
	
func get_current_node() -> Node3D:
	return get_current_nodes()[0]




"

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_p5wvb"]

[node name="pkc_base" type="Node3D"]

[node name="CorePrinciples" type="Node3D" parent="."]

[node name="ConnectionToCreatures" type="Node3D" parent="CorePrinciples"]

[node name="EachFeelsIdiosyncratic" type="Node3D" parent="CorePrinciples/ConnectionToCreatures"]

[node name="ItIsALossWhenTheyLeave" type="Node3D" parent="CorePrinciples/ConnectionToCreatures"]

[node name="EachTownHasASoundIdeology" type="Node3D" parent="CorePrinciples"]

[node name="BattlesFeelDynamicButManagable" type="Node3D" parent="CorePrinciples"]

[node name="WaysToInteractOtherThanFighting" type="Node3D" parent="CorePrinciples"]

[node name="EveryActionPersists" type="Node3D" parent="CorePrinciples"]

[node name="ToDo" type="Node3D" parent="."]

[node name="BattleSystem" type="Node3D" parent="ToDo"]

[node name="CreatureSocialSystem" type="Node3D" parent="ToDo"]

[node name="TypeDesign" type="Node3D" parent="ToDo"]

[node name="Camp" type="Node3D" parent="ToDo"]

[node name="RouteGeneration" type="Node3D" parent="ToDo"]

[node name="TrainerGeneration" type="Node3D" parent="ToDo"]

[node name="Reputation" type="Node3D" parent="ToDo"]

[node name="RespectOrVirtue" type="Node3D" parent="ToDo/Reputation"]

[node name="Intimidation" type="Node3D" parent="ToDo/Reputation"]

[node name="Scary" type="Node3D" parent="ToDo/Reputation/Intimidation"]

[node name="QuickVictory" type="Node3D" parent="ToDo/Reputation/Intimidation/Scary"]

[node name="Weak" type="Node3D" parent="ToDo/Reputation/Intimidation"]

[node name="RunningFromBattle" type="Node3D" parent="ToDo/Reputation/Intimidation/Weak"]

[node name="Appeal" type="Node3D" parent="ToDo/Reputation"]

[node name="BasedOnFaction" type="Node3D" parent="ToDo/Reputation/Appeal"]

[node name="Like" type="Node3D" parent="ToDo/Reputation/Appeal"]

[node name="Dislike" type="Node3D" parent="ToDo/Reputation/Appeal"]

[node name="WorldMap" type="Node3D" parent="ToDo"]

[node name="TownDesign" type="Node3D" parent="ToDo"]

[node name="TrainDesign" type="Node3D" parent="ToDo/TownDesign"]

[node name="CreatureDesigns" type="Node3D" parent="ToDo"]

[node name="First10" type="Node3D" parent="ToDo/CreatureDesigns"]

[node name="Screens" type="Node3D" parent="."]

[node name="MainMenu" type="Node3D" parent="Screens"]

[node name="Routes" type="Node3D" parent="Screens"]

[node name="Camp" type="Node3D" parent="Screens"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)
script = ExtResource("1_pswc5")
current = true
camera_path = NodePath("../../CameraRig")

[node name="Floor" type="StaticBody3D" parent="Screens/Camp"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Screens/Camp/Floor"]
mesh = SubResource("PlaneMesh_qn4bd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Screens/Camp/Floor"]
shape = SubResource("BoxShape3D_ffrid")

[node name="ExpandableNintendogsArea" type="Node3D" parent="Screens/Camp"]

[node name="ActsAsMenuAndCrafting" type="Node3D" parent="Screens/Camp"]

[node name="CanInteractWithPokemon" type="Node3D" parent="Screens/Camp"]

[node name="PokemonHelpInCrafting" type="Node3D" parent="Screens/Camp"]

[node name="PokemonA" parent="Screens/Camp" instance=ExtResource("1_2njg4")]
action_enabled = true

[node name="BattleSystem" type="Node3D" parent="Screens"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8)
script = ExtResource("1_e01fe")

[node name="StaticBody3D" type="StaticBody3D" parent="Screens/BattleSystem"]

[node name="Floor" type="MeshInstance3D" parent="Screens/BattleSystem/StaticBody3D"]
mesh = SubResource("PlaneMesh_g5c0h")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_l0i1w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Screens/BattleSystem/StaticBody3D"]
shape = SubResource("BoxShape3D_f3gb6")

[node name="PokemonA" parent="Screens/BattleSystem" instance=ExtResource("1_2njg4")]

[node name="PokemonB" type="CharacterBody3D" parent="Screens/BattleSystem"]
process_mode = 1
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.3, 0.1, 0)
script = ExtResource("5_d55lq")
commands = [ExtResource("3_i7yeb")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Screens/BattleSystem/PokemonB"]
shape = SubResource("SphereShape3D_vtavm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Screens/BattleSystem/PokemonB"]
mesh = SubResource("SphereMesh_8vgnm")

[node name="CommandList" type="Node3D" parent="Screens/BattleSystem/PokemonB"]
script = SubResource("GDScript_ltquw")
break_point = 0
resolution = 5

[node name="Pass" type="Node3D" parent="Screens/BattleSystem/PokemonB/CommandList"]
script = ExtResource("2_an4jq")

[node name="Tackle" type="Node3D" parent="Screens/BattleSystem/PokemonB/CommandList"]
script = ExtResource("4_srhnw")

[node name="Move" type="Node3D" parent="Screens/BattleSystem/PokemonB/CommandList"]
script = ExtResource("3_i7yeb")
target = Vector3(0, 0, 2)
direction = null
parent_path = NodePath("../..")
cost_time = 5.0

[node name="CameraRig" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)
script = ExtResource("9_4xj64")

[node name="Camera3D" type="Camera3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2, 4)
attributes = SubResource("CameraAttributesPractical_p5wvb")
current = true

[node name="RayCast3D" type="RayCast3D" parent="CameraRig/Camera3D"]
target_position = Vector3(0, 0, -1000)

[node name="SpotLight3D" type="SpotLight3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2, 4)
light_energy = 16.0
spot_range = 20.857
spot_angle = 21.36
spot_angle_attenuation = 0.0625001
